@@ -35,6 +35,10 @@ NOT RELEASED YET
       a change to FILE when the ``--short`` and ``--line`` log formats
       are used. (Ian Clatworthy, #317417)
 
+    * ``bzr log -r..Y FILE`` now shows the history of FILE provided
+      it existed in Y, even if the file has since been deleted or
+      renamed. (Ian Clatworthy, #175520)
+
     * Fix a problem with CIFS client/server lag on Windows colliding with
       an invariant-per-process algorithm for generating AtomicFile names
       (Adrian Wilkins, #304023)
